// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product OpenShift Metrics config should apply an inventory configuration: filtered 1`] = `
{
  "cells": [
    {
      "title": "lorem ipsum",
    },
    {
      "title": "100.00",
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_display_name, {"context":"OpenShift-metrics"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_Cores, {"context":"OpenShift-metrics"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"OpenShift-metrics"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "Cores": {
      "title": "t(curiosity-inventory.header_Cores, {"context":"OpenShift-metrics"})",
      "value": 100,
    },
    "display_name": {
      "title": "t(curiosity-inventory.header_display_name, {"context":"OpenShift-metrics"})",
      "value": "lorem ipsum",
    },
    "last_seen": {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"OpenShift-metrics"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
  },
}
`;

exports[`Product OpenShift Metrics config should apply an inventory configuration: filtered, NOT authorized 1`] = `
{
  "cells": [
    {
      "title": <React.Fragment>
        lorem ipsum
         
        
      </React.Fragment>,
    },
    {
      "title": "100.00",
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_display_name, {"context":"OpenShift-metrics"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_Cores, {"context":"OpenShift-metrics"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"OpenShift-metrics"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "Cores": {
      "title": "t(curiosity-inventory.header_Cores, {"context":"OpenShift-metrics"})",
      "value": 100,
    },
    "display_name": {
      "title": "t(curiosity-inventory.header_display_name, {"context":"OpenShift-metrics"})",
      "value": "lorem ipsum",
    },
    "instance_id": {
      "title": "t(curiosity-inventory.header_instance_id, {"context":"OpenShift-metrics"})",
      "value": "XXXX-XXXX-XXXXX-XXXXX",
    },
    "last_seen": {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"OpenShift-metrics"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
  },
}
`;

exports[`Product OpenShift Metrics config should apply an inventory configuration: filtered, authorized 1`] = `
{
  "cells": [
    {
      "title": <React.Fragment>
        <Button
          component="a"
          href="/insights/inventory/XXXX-XXXX-XXXXX-XXXXX/"
          isInline={true}
          variant="link"
        >
          lorem ipsum
        </Button>
         
        
      </React.Fragment>,
    },
    {
      "title": "100.00",
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_display_name, {"context":"OpenShift-metrics"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_Cores, {"context":"OpenShift-metrics"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"OpenShift-metrics"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "Cores": {
      "title": "t(curiosity-inventory.header_Cores, {"context":"OpenShift-metrics"})",
      "value": 100,
    },
    "display_name": {
      "title": "t(curiosity-inventory.header_display_name, {"context":"OpenShift-metrics"})",
      "value": "lorem ipsum",
    },
    "instance_id": {
      "title": "t(curiosity-inventory.header_instance_id, {"context":"OpenShift-metrics"})",
      "value": "XXXX-XXXX-XXXXX-XXXXX",
    },
    "last_seen": {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"OpenShift-metrics"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
  },
}
`;

exports[`Product OpenShift Metrics config should apply an inventory configuration: filtered, fallback display 1`] = `
{
  "cells": [
    {
      "title": "lorem ipsum",
    },
    {
      "title": "100.00",
    },
    {
      "title": "",
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_display_name, {"context":"OpenShift-metrics"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_Cores, {"context":"OpenShift-metrics"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"OpenShift-metrics"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "Cores": {
      "title": "t(curiosity-inventory.header_Cores, {"context":"OpenShift-metrics"})",
      "value": 100,
    },
    "display_name": {
      "title": "t(curiosity-inventory.header_display_name, {"context":"OpenShift-metrics"})",
      "value": "lorem ipsum",
    },
    "instance_id": {
      "title": "t(curiosity-inventory.header_instance_id, {"context":"OpenShift-metrics"})",
      "value": null,
    },
    "last_seen": {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"OpenShift-metrics"})",
      "value": null,
    },
    "number_of_guests": {
      "title": "t(curiosity-inventory.header_number_of_guests, {"context":"OpenShift-metrics"})",
      "value": null,
    },
  },
}
`;

exports[`Product OpenShift Metrics config should apply graph configuration: filters 1`] = `
{
  "filtersSettings": [
    {
      "settings": {
        "actions": [
          {
            "content": [Function],
          },
          {
            "id": "rangedMonthly",
            "position": "right",
          },
        ],
        "color": "#06c",
        "fill": "#8bc1f7",
        "groupMetric": [
          "Cores",
        ],
        "isCardTitleDescription": true,
        "isMetricDisplay": false,
        "isMultiMetric": false,
        "isStacked": false,
        "isStandalone": undefined,
        "metric": undefined,
        "metrics": [
          {
            "chartType": "area",
            "color": "#06c",
            "fill": "#8bc1f7",
            "id": "Cores",
            "isCapacity": false,
            "isStacked": false,
            "isThreshold": false,
            "isToolbarFilter": false,
            "metric": "Cores",
            "stroke": "#06c",
            "strokeWidth": 2,
          },
        ],
        "stringId": "Cores",
        "stroke": "#06c",
      },
    },
  ],
}
`;

exports[`Product OpenShift Metrics config should apply graph configuration: product action display should NOT display a total value 1`] = `
{
  "productActionDisplay": <div
    className="curiosity-usage-graph__total"
  />,
}
`;

exports[`Product OpenShift Metrics config should apply graph configuration: product action display should display a total value 1`] = `
{
  "productActionDisplay": <div
    className="curiosity-usage-graph__total"
  >
    t(curiosity-graph.cardActionTotal_Cores, {"context":"Ipsum","total":"1.1K"})
  </div>,
}
`;

exports[`Product OpenShift Metrics config should apply graph configuration: product action display should display a total value below 1000 1`] = `
{
  "productActionDisplay": <div
    className="curiosity-usage-graph__total"
  >
    t(curiosity-graph.cardActionTotal_Cores, {"context":"Ipsum","total":"500"})
  </div>,
}
`;

exports[`Product OpenShift Metrics config should apply graph configuration: product action display should display a total value below 1000000 1`] = `
{
  "productActionDisplay": <div
    className="curiosity-usage-graph__total"
  >
    t(curiosity-graph.cardActionTotal_Cores, {"context":"Ipsum","total":"900K"})
  </div>,
}
`;

exports[`Product OpenShift Metrics config should apply graph configuration: settings 1`] = `
{
  "actions": [
    {
      "content": [Function],
    },
    {
      "id": "rangedMonthly",
      "position": "right",
    },
  ],
  "isCardTitleDescription": true,
}
`;

exports[`Product OpenShift Metrics config should apply toolbar configuration: filters 1`] = `undefined`;
